array.island.Island.scala.error
Compilation error:
Island:12: error: not found: value mun
      max = mun(i);
            ^Island:16: error: type mismatch;
 found   : Int
 required: Boolean
  var levels = Array[Boolean](max-min+1);
                                     ^Island:19: error: not found: value mun
    levels(mun(i)-min) = true;
           ^